src/objects/FieloCMS__Media__c.object
<CustomObject>
    <description>Media is a repository to show image files.</description>
    <fields>
        <fullName>FieloCMS__AlternativeText__c</fullName>
        <description>Alternative text that appears if the image is not uploaded.</description>
        <inlineHelpText>Enter alternative text that appears if the image is not uploaded.</inlineHelpText>
        <label>Alternative Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Caption__c</fullName>
        <description>Image description.</description>
        <inlineHelpText>Enter image description.</inlineHelpText>
        <label>Caption</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Category to apply to the Media element.</description>
        <inlineHelpText>Choose a Category to apply to the Media element.</inlineHelpText>
        <label>Category</label>
        <referenceTo>FieloCMS__Category__c</referenceTo>
        <relationshipLabel>Media</relationshipLabel>
        <relationshipName>Media</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__DocumentId__c</fullName>
        <description>Media reference.</description>
        <inlineHelpText>Media reference.</inlineHelpText>
        <label>Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__ExternalURL__c</fullName>
        <description>Image external URL.</description>
        <inlineHelpText>Choose an image external URL.</inlineHelpText>
        <label>External URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Height__c</fullName>
        <description>Image height when Media element is an image file.</description>
        <inlineHelpText>Image height.</inlineHelpText>
        <label>Height</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCMS__URL__c</fullName>
        <description>Media element URL.</description>
        <formula>IF ( IsBlank(FieloCMS__ExternalURL__c), IF ( IsBlank(FieloCMS__DocumentId__c), &apos;&apos;,
&apos;//c.&apos; + $Setup.FieloCMS__OrganizationSettings__c.FieloCMS__Instance__c + &apos;.content.force.com/servlet/servlet.ImageServer?id=&apos; + FieloCMS__DocumentId__c + &apos;&amp;oid=&apos; + $Organization.Id + &apos;&amp;lastModifiedDate=&apos; + Text(LastModifiedDate)  ), FieloCMS__ExternalURL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Media element URL.</inlineHelpText>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Width__c</fullName>
        <description>Image width when Media element is an image file.</description>
        <inlineHelpText>Image width.</inlineHelpText>
        <label>Width</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>FieloPLT__Segment__c</referenceTo>
        <relationshipLabel>Media</relationshipLabel>
        <relationshipName>Media</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Media</label>
    <nameField>
        <label>Media Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media</pluralLabel>
    <recordTypes>
        <fullName>FieloCMS__Audio</fullName>
        <active>true</active>
        <description>Media type is audio.</description>
        <label>Audio</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCMS__Image</fullName>
        <active>true</active>
        <description>Media type is image.</description>
        <label>Image</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCMS__Video</fullName>
        <active>true</active>
        <description>Media type is video.</description>
        <label>Video</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>